# popplerAtom

./: .gitignore  AtomOutputDev.cpp  AtomOutputDev.h  AtomPath.cpp  AtomPath.h  CMakeLists.txt  LICENSE  Makefile  PdfAtomCApi.cpp  PdfAtomCApi.h  PdfAtomInterface.cpp  PdfAtomInterface.h  README.md  make_dist.py  make_dist.sh  pdfatom.py  pdftohtmlsomain.cc  poppler_atom_types.h
example/: debug_html.py  debug_json.py  pdfatom.py
